--- a/src/test/resources/test.html
+++ b/src/test/resources/test.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<form enctype="text/plain" method="post" action="http://localhost:50465/mailer" target="_top">
+<form method="post" action="http://localhost:50465/mailer" target="_top">
     <div>
         <div class="row">
             <div class="6u">
