--- a/src/test/resources/test.html
+++ b/src/test/resources/test.html
@@ -7,6 +7,8 @@
 
 <body>
 <form method="post" action="http://localhost:50465/mailer" target="_top">
+    <input type="hidden" name="success" value="/success.html">
+    <input type="hidden" name="fail" value="/fail.html">
     <div>
         <div class="row">
             <div class="6u">
